--- a/halo2_gadgets/Cargo.toml
+++ b/halo2_gadgets/Cargo.toml
@@ -27,8 +27,8 @@ bitvec = "1"
 ff = { version = "0.13", features = ["bits"] }
 group = "0.13"
 halo2_proofs = { version = "0.2", path = "../halo2_proofs", default-features = false }
+halo2curves = { git = "https://github.com/cyphersnake/halo2curves", tag = "repr-c.dev.0" }
 lazy_static = "1"
-halo2curves = { version = "0.1.0" }
 proptest = { version = "1.0.0", optional = true }
 rand = "0.8"
 subtle = "2.3"
