--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -50,8 +50,8 @@ harness = false
 [dependencies]
 backtrace = { version = "0.3", optional = true }
 ff = "0.13"
+halo2curves = { git = "https://github.com/cyphersnake/halo2curves", tag = "repr-c.dev.1" }
 group = "0.13"
-halo2curves = { version = "0.1.0" }
 rand_core = { version = "0.6", default-features = false }
 tracing = "0.1"
 blake2b_simd = "1"
